# opengl-robot-animation

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
framework/: glerror.h
src/: AppMain.cpp
src/Framework/Assets/: ShaderProgram.cpp  ShaderProgram.h
src/Framework/SceneElements/: Transform.cpp  Transform.h
src/Game/: ApplicationWindow.cpp  ApplicationWindow.h  CubeMeshWithNormals.h  RobotAnimationScene.cpp  RobotAnimationScene.h
