cmake_minimum_required(VERSION 3.16)
project(OpenGL_Praktikum)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/AppMain.cpp")
set(INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/src")

## Application/framework sources
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Assets/AssetManager.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Assets/AssetManager.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Assets/ShaderProgram.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Assets/ShaderProgram.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Rendering/Primitives.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Rendering/Primitives.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/SceneElements/Transform.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/SceneElements/Transform.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Game/ApplicationWindow.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Game/ApplicationWindow.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Game/RobotAnimationScene.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Game/RobotAnimationScene.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Game/CubeMeshWithNormals.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/CommonTypes.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/fw_config.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/OpenGLWindow.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/OpenGLWindow.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/glerror.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/glerror.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/Input.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/Input.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/libheaders.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/OBJLoader.h")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/framework/OBJLoader.cpp")

list(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Assets")
list(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Rendering")
list(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/SceneElements")
list(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/src/Game")
list(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/framework")

add_executable(OpenGL_Praktikum ${SOURCES})
target_include_directories(OpenGL_Praktikum PRIVATE ${INCLUDES})

## Dependencies
find_package(OpenGL REQUIRED)
target_link_libraries(OpenGL_Praktikum PRIVATE OpenGL::GL)

## glm (use local vendor copy if present, otherwise system package)
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libs/glm-master/CMakeLists.txt")
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/libs/glm-master")
    target_link_libraries(OpenGL_Praktikum PRIVATE glm)
else()
    find_package(glm CONFIG REQUIRED)
    target_link_libraries(OpenGL_Praktikum PRIVATE glm::glm)
endif()

## glfw (use local vendor copy if present, otherwise system package)
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libs/glfw-3.2.1/CMakeLists.txt")
    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
    set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/libs/glfw-3.2.1")
    target_include_directories(OpenGL_Praktikum PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libs/glfw-3.2.1/include")
    target_link_libraries(OpenGL_Praktikum PRIVATE glfw ${GLFW_LIBRARIES})
else()
    find_package(glfw3 CONFIG REQUIRED)
    if (TARGET glfw)
        target_link_libraries(OpenGL_Praktikum PRIVATE glfw)
    elseif (TARGET glfw3::glfw)
        target_link_libraries(OpenGL_Praktikum PRIVATE glfw3::glfw)
    else()
        message(FATAL_ERROR "GLFW package found but no known target (glfw / glfw3::glfw) is available.")
    endif()
endif()

## glew (use local vendor copy if present, otherwise system package)
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libs/glew-2.1.0/build/cmake/CMakeLists.txt")
    set(BUILD_UTILS OFF CACHE BOOL "" FORCE)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/libs/glew-2.1.0/build/cmake")
    target_include_directories(OpenGL_Praktikum PRIVATE
            "${CMAKE_CURRENT_SOURCE_DIR}/libs/glew-2.1.0/include"
            "${CMAKE_CURRENT_SOURCE_DIR}/libs/glew-2.1.0/include/GL")
    target_link_libraries(OpenGL_Praktikum PRIVATE glew_s)
else()
    find_package(GLEW REQUIRED)
    if (TARGET GLEW::GLEW)
        target_link_libraries(OpenGL_Praktikum PRIVATE GLEW::GLEW)
    elseif (TARGET GLEW::glew)
        target_link_libraries(OpenGL_Praktikum PRIVATE GLEW::glew)
    else()
        message(FATAL_ERROR "GLEW package found but no known target (GLEW::GLEW / GLEW::glew) is available.")
    endif()
endif()

## stb is a required local dependency
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/libs/stb")
target_include_directories(OpenGL_Praktikum PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libs/stb")
target_link_libraries(OpenGL_Praktikum PRIVATE stb)

## Copy runtime assets to output folder
file(COPY "assets" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
